cluster/apps/database/influxdb/ingrss.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`influxdb.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
  tls:
    secretName: ${SECRET_CERT}
